software/pcx86/sys/os2/ibm/1.2/index.md
---
layout: page
title: IBM OS/2 1.2
permalink: /software/pcx86/sys/os2/ibm/1.2/
redirect_from: /disks/pcx86/os2/ibm/1.2/
machines:
  - id: ibm5170
    type: pcx86
    config: /configs/pcx86/machine/ibm/5170/cga/640kb/rev3/machine.xml
    autoGen: true
    autoMount:
      B:
        name: "IBM OS/2 1.2 (Disk 1)"
    autoType: $date\r$time\rB:\rDIR\r
---

{% include machine.html id="ibm5170" %}

### Directory of IBM OS/2 1.2 (Install)

     Volume in drive A is OS2 INSTALL
     Directory of A:\

    OS2LDR      *    14336   8-31-89  12:00p
    OS2KRNL     *   339770   8-31-89  12:00p
    ABIOS    SYS       120   8-31-89  12:00p
    SYSINSTX COM     45344   8-31-89  12:00p
    SIPANEL1 DLL     17696   8-31-89  12:00p
    ANSICALL DLL      4133   8-31-89  12:00p
    BKSCALLS DLL      7175   8-31-89  12:00p
    BMSCALLS DLL      4157   8-31-89  12:00p
    BVSCALLS DLL     20563   8-31-89  12:00p
    BASEDD01 SYS     57413   8-31-89  12:00p
    BASEDD02 SYS     62933   8-31-89  12:00p
    BASEDD03 SYS     57413   8-31-89  12:00p
    CMD      EXE     86320   8-31-89  12:00p
    CGA      RC@      4844   8-31-89  12:00p
    EGA      RC@      4883   8-31-89  12:00p
    PLASMA   RC@      4900   8-31-89  12:00p
    VGAM     RC@      4900   8-31-89  12:00p
    VGA      RC@      4900   8-31-89  12:00p
    8514     RC@      4898   8-31-89  12:00p
    8514M    RC@      4900   8-31-89  12:00p
    INISYS   RC@       679   8-31-89  12:00p
    INI      RC@      3739   8-31-89  12:00p
    UPINI    RC@       545   8-31-89  12:00p
    CONFIG   SYS       329   8-31-89  12:00p
    COUNTRY  SYS     13676   8-31-89  12:00p
    DOSCALL1 DLL     14651   8-31-89  12:00p
    F80000   BIO      9728   8-31-89  12:00p
    F80100   BIO      9216   8-31-89  12:00p
    F80402   BIO      1536   8-31-89  12:00p
    F80902   BIO      1536   8-31-89  12:00p
    F80D00   BIO      1536   8-31-89  12:00p
    FC0400   BIO      9728   8-31-89  12:00p
    FC0403   BIO      1536   8-31-89  12:00p
    FC0500   BIO      9728   8-31-89  12:00p
    F80C00   BIO      1024   8-31-89  12:00p
    F80702   BIO      1536   8-31-89  12:00p
    FDISK    COM     45440   8-31-89  12:00p
    HARDERR  EXE     17088   8-31-89  12:00p
    KBDCALLS DLL      8265   8-31-89  12:00p
    KEYBOARD DCP      5177   8-31-89  12:00p
    MONCALLS DLL      7348   8-31-89  12:00p
    MOUCALLS DLL      5692   8-31-89  12:00p
    MSG      DLL      6218   8-31-89  12:00p
    NAMPIPES DLL      1553   8-31-89  12:00p
    NLS      DLL      5428   8-31-89  12:00p
    OSO001   MSG    105387   8-31-89  12:00p
    HPFS     IFS     97306   8-31-89  12:00p
    QUECALLS DLL     10282   8-31-89  12:00p
    SESMGR   DLL     30017   8-31-89  12:00p
    SWAPPER  EXE      4660   8-31-89  12:00p
    SYSINST1 EXE      3936   8-31-89  12:00p
    SYSINST2 EXE    103888   8-31-89  12:00p
    VDISK    SYS      4660   8-31-89  12:00p
    BVHINIT  DLL      9758   8-31-89  12:00p
    VIOCALLS DLL     17430   8-31-89  12:00p
    VTBL850  DCP     10478   8-31-89  12:00p
           56 file(s)    1332332 bytes
                          111104 bytes free

### Directory of IBM OS/2 1.2 (Disk 1)

     Volume in drive A is OS2 DISK 1
     Directory of A:\

    ANSI     EX@      9521   8-31-89  12:00p
    ANSI     SY@      2123   8-31-89  12:00p
    APPEND   EX@      4486   8-31-89  12:00p
    ASSIGN   CO@      1526   8-31-89  12:00p
    ATTRIB   EX@     28076   8-31-89  12:00p
    BOOT     CO@     31322   8-31-89  12:00p
    CACHE    EX@     10391   8-31-89  12:00p
    COMMAND  CO@     22394   8-31-89  12:00p
    COMP     CO@     30214   8-31-89  12:00p
    DDINSTAL EX@     50537   8-31-89  12:00p
    DISKCOMP CO@     32006   8-31-89  12:00p
    DISKCOPY CO@     32857   8-31-89  12:00p
    EAUTIL   EX@     29501   8-31-89  12:00p
    EDLIN    CO@      5674   8-31-89  12:00p
    FIND     EX@     25510   8-31-89  12:00p
    GRAFTABL CO@      5702   8-31-89  12:00p
    JOIN     EX@     18980   8-31-89  12:00p
    KEYB     CO@     13481   8-31-89  12:00p
    LABEL    CO@     25430   8-31-89  12:00p
    SYSLOG   EX@     54440   8-31-89  12:00p
    BACKUP   EXE     29095   8-31-89  12:00p
    CHKDSK   COM     67968   8-31-89  12:00p
    FORMAT   COM     57552   8-31-89  12:00p
    KEYBOARD DCP     94007   8-31-89  12:00p
    RECOVER  COM     53696   8-31-89  12:00p
    RESTORE  EXE     38251   8-31-89  12:00p
    SIPANEL2 DLL    174976   8-31-89  12:00p
    STARTLW  DLL      1076   8-31-89  12:00p
    SYSINST  SCD      6220   8-31-89  12:00p
    UHPFS    DLL    150336   8-31-89  12:00p
    UNPACK   EXE     52096   8-31-89  12:00p
           31 file(s)    1159444 bytes
                          290304 bytes free

### Directory of IBM OS/2 1.2 (Disk 2)

     Volume in drive A is OS2 DISK 2
     Directory of A:\

    BASIC    CO@       479   8-31-89  12:00p
    BASICA   CO@     35573   8-31-89  12:00p
    COM01    SY@      6221   8-31-89  12:00p
    COM02    SY@      9382   8-31-89  12:00p
    CONVERT  EX@     15080   8-31-89  12:00p
    CREATEDD EX@     21059   8-31-89  12:00p
    FDISKPM  EX@     52571   8-31-89  12:00p
    FDISKPMH HL@      8260   8-31-89  12:00p
    LINK     EX@     99356   8-31-89  12:00p
    LOGDAEM  EX@     18775   8-31-89  12:00p
    MODE     CO@     38821   8-31-89  12:00p
    MORE     CO@     26899   8-31-89  12:00p
    MORTGAGE BA@      4673   8-31-89  12:00p
    MOUSE    SY@     12182   8-31-89  12:00p
    IBMMOU01 SY@      1759   8-31-89  12:00p
    IBMMOU02 SY@      2266   8-31-89  12:00p
    MSBUS01  SY@      2033   8-31-89  12:00p
    MSINP01  SY@      1702   8-31-89  12:00p
    MSPS201  SY@      1796   8-31-89  12:00p
    MSPS202  SY@      2404   8-31-89  12:00p
    MSSER01  SY@      2294   8-31-89  12:00p
    MSSER02  SY@      2687   8-31-89  12:00p
    PCMOU01  SY@      2038   8-31-89  12:00p
    PCMOU02  SY@      2476   8-31-89  12:00p
    VISION01 SY@      2053   8-31-89  12:00p
    VISION02 SY@      2461   8-31-89  12:00p
    OSO001H  MS@     67177   8-31-89  12:00p
    PATCH    EX@     32494   8-31-89  12:00p
    POINTDD  SY@      5563   8-31-89  12:00p
    PRINT    CO@     26941   8-31-89  12:00p
    PSTAT    EX@     12991   8-31-89  12:00p
    REPLACE  EX@     31661   8-31-89  12:00p
    SETCOM40 EX@      7784   8-31-89  12:00p
    SORT     EX@     26560   8-31-89  12:00p
    SPOOL    EX@     15872   8-31-89  12:00p
    STXTDMPC DL@      9751   8-31-89  12:00p
    SUBST    EX@     18529   8-31-89  12:00p
    SYSLEVEL EX@     26546   8-31-89  12:00p
    SYSLEVEL OS@       140   8-31-89  12:00p
    TRACE    EX@     19612   8-31-89  12:00p
    TRACEFMT EX@     33421   8-31-89  12:00p
    TREE     CO@     27443   8-31-89  12:00p
    VIOTBL   DC@     17780   8-31-89  12:00p
    XCOPY    EX@     37979   8-31-89  12:00p
    HELPMGR  DL@     95293   8-31-89  12:00p
    HMHELP   HL@     13802   8-31-89  12:00p
    PMHINIT  DL@      2867   8-31-89  12:00p
    E        EX@     19261   8-31-89  12:00p
    EHXDDLGS DL@     44773   8-31-89  12:00p
    EHXDL    DL@     11327   8-31-89  12:00p
    PMMLE    DL@     48775   8-31-89  12:00p
    EHXHP    HL@     19654   8-31-89  12:00p
           52 file(s)    1049296 bytes
                          394752 bytes free

### Directory of IBM OS/2 1.2 (Disk 3)

     Volume in drive A is OS2 DISK 3
     Directory of A:\

    CMDREF   IN@    164344   8-31-89  12:00p
    CPISPFPC DL@     88475   8-31-89  12:00p
    DMPC     EX@      2093   8-31-89  12:00p
    DOS      SY@      1214   8-31-89  12:00p
    DOSCALLS LI@     16606   8-31-89  12:00p
    DTM      DL@       958   8-31-89  12:00p
    EGA      SY@      2534   8-31-89  12:00p
    EXTDSKDD SY@      1765   8-31-89  12:00p
    HELP     BA@       361   8-31-89  12:00p
    HELP     CM@       353   8-31-89  12:00p
    HELPMSG  EX@     28289   8-31-89  12:00p
    INACALL  DL@       926   8-31-89  12:00p
    INSTAID  CM@       256   8-31-89  12:00p
    INSTAID  CN@       250   8-31-89  12:00p
    INSTAID  LI@      9179   8-31-89  12:00p
    INSTAID  PR@       229   8-31-89  12:00p
    INSTAIDE EX@     66298   8-31-89  12:00p
    ISPD     MS@      1196   8-31-89  12:00p
    ISPM     MS@       485   8-31-89  12:00p
    PMCPL    EX@     64886   8-31-89  12:00p
    PMCPLH   HL@     23582   8-31-89  12:00p
    PMEXEC   EX@     48440   8-31-89  12:00p
    PMEXECH  HL@     22145   8-31-89  12:00p
    PMFILE   EX@    157367   8-31-89  12:00p
    PMFILEH  HL@     48502   8-31-89  12:00p
    PMSHELL  EX@      7186   8-31-89  12:00p
    PMSHELLH HL@      1262   8-31-89  12:00p
    PMSHLTKT DL@      3866   8-31-89  12:00p
    PMSPOOL  EX@     54349   8-31-89  12:00p
    PMSPOOLH HL@     23857   8-31-89  12:00p
    VIEW     EX@     13598   8-31-89  12:00p
    VIEWDOC  EX@     12901   8-31-89  12:00p
    VIEWH    HL@     12710   8-31-89  12:00p
           33 file(s)     880462 bytes
                          569344 bytes free

### Directory of IBM OS/2 1.2 (Disk 4)

     Volume in drive A is OS2 DISK 4
     Directory of A:\

    4201     DC@      5150   8-31-89  12:00p
    5202     DC@       329   8-31-89  12:00p
    COURIER  FO@    163153   8-31-89  12:00p
    IBM4201  DR@     54892   8-31-89  12:00p
    MAKEINI  EX@     41548   8-31-89  12:00p
    OS2SM    DL@     28975   8-31-89  12:00p
    OS2SM    PD@      1340   8-31-89  12:00p
    OS2SMDUM DL@       301   8-31-89  12:00p
    OS2SPLFS DL@      2515   8-31-89  12:00p
    PICH     HL@      9790   8-31-89  12:00p
    PICICHG  EX@     17582   8-31-89  12:00p
    PICPH    HL@     23992   8-31-89  12:00p
    PICPRINT EX@     73096   8-31-89  12:00p
    PICSHOW  EX@     25693   8-31-89  12:00p
    PMAVIO   DL@      4105   8-31-89  12:00p
    PMBIND   DL@     37171   8-31-89  12:00p
    PMC00000 TF@      2215   8-31-89  12:00p
    PMC10000 TF@      3544   8-31-89  12:00p
    PMC20000 TF@     10367   8-31-89  12:00p
    PMC30000 TF@       719   8-31-89  12:00p
    PMC40000 TF@       280   8-31-89  12:00p
    PMC50000 TF@      8066   8-31-89  12:00p
    PMC60000 TF@      1673   8-31-89  12:00p
    PMC70000 TF@      2419   8-31-89  12:00p
    PMC80000 TF@       371   8-31-89  12:00p
    PMGPI    DL@    150569   8-31-89  12:00p
    PMGPI    PD@      3056   8-31-89  12:00p
    PMPIC    DL@     27475   8-31-89  12:00p
    PMPIC    PD@       134   8-31-89  12:00p
    PMPRINT  QP@      8737   8-31-89  12:00p
    PMSHAPI  DL@     38830   8-31-89  12:00p
    PMSHAPI  PD@       778   8-31-89  12:00p
    PMSPL    DL@      5959   8-31-89  12:00p
    PMSPL    PD@       698   8-31-89  12:00p
    PMTKT    DL@     17942   8-31-89  12:00p
    PMTRACE  DL@      1418   8-31-89  12:00p
    PMVIOP   DL@     27308   8-31-89  12:00p
    PMVIOP   HL@      3299   8-31-89  12:00p
    PMWINDUM DL@       637   8-31-89  12:00p
    PSHH     HL@     12427   8-31-89  12:00p
    SPL1B    DL@     35503   8-31-89  12:00p
    SPL1B    PD@      1042   8-31-89  12:00p
    SPL2B    DL@      2630   8-31-89  12:00p
    SPL2B    PD@       176   8-31-89  12:00p
    SPLDVWRK EX@      6529   8-31-89  12:00p
    SPLPRM   EX@     11938   8-31-89  12:00p
    SPOOLCP  DL@      7093   8-31-89  12:00p
    TIMES    FO@    273845   8-31-89  12:00p
    TRSEL    EX@     13655   8-31-89  12:00p
    MOVESPL  EX@     27761   8-31-89  12:00p
           50 file(s)    1198725 bytes
                          245248 bytes free

### Directory of IBM OS/2 1.2 (Disk 5)

     Volume in drive A is OS2 DISK 5
     Directory of A:\

    BVH8514A DL@      6248   8-31-89  12:00p
    BVHCGA   DL@     14575   8-31-89  12:00p
    BVHEGA   DL@     20350   8-31-89  12:00p
    BVHMPA   DL@     11456   8-31-89  12:00p
    BVHVGA   DL@     23047   8-31-89  12:00p
    BVHWNDW  DL@      5878   8-31-89  12:00p
    FKA      DL@     11173   8-31-89  12:00p
    HELV     FO@    229361   8-31-89  12:00p
    IBMBGA   DL@    125911   8-31-89  12:00p
    IBMCGA   DL@     68951   8-31-89  12:00p
    IBMEGA   DL@     74348   8-31-89  12:00p
    IBMVGA   DL@     75298   8-31-89  12:00p
    PMDD     SY@      2983   8-31-89  12:00p
    PMGRE    DL@    145955   8-31-89  12:00p
    PMGRE    PD@       206   8-31-89  12:00p
    PMWIN    DL@    185186   8-31-89  12:00p
    PMWIN    PD@      3587   8-31-89  12:00p
    INTROE   EX@     76396   8-31-89  12:00p
    INTROI   TU@     26318   8-31-89  12:00p
    INTROS   TU@     16543   8-31-89  12:00p
           20 file(s)    1123770 bytes
                          328192 bytes free

### Directory of IBM OS/2 1.2 (Driver 1)

     Volume in drive A is OS2 DISK 6
     Directory of A:\

    IBMNULL  DRV     81760   8-31-89  12:00p
    IBM4202  DRV     82000   8-31-89  12:00p
    IBM5216  DRV     62864   8-31-89  12:00p
    IBM52011 DRV     62704   8-31-89  12:00p
    IBM52012 DRV     88320   8-31-89  12:00p
    IBM3852  DRV     81472   8-31-89  12:00p
    IBM5152  DRV     81520   8-31-89  12:00p
    IBM4207  DRV     89488   8-31-89  12:00p
    IBM4208  DRV     89504   8-31-89  12:00p
    IBM5182  DRV     88272   8-31-89  12:00p
    IBM5202  DRV     90672   8-31-89  12:00p
    PLOTTERS DRV     97216   8-31-89  12:00p
    IBM4201  DCP     17069   8-31-89  12:00p
    4208     DCP       533   8-31-89  12:00p
    READMEDD DAT     27676   8-31-89  12:00p
           15 file(s)    1041070 bytes
                          412160 bytes free

### Directory of IBM OS/2 1.2 (Driver 2)

     Volume in drive A is OS2 DISK 7
     Directory of A:\

    EPSON    DRV     48640   8-31-89  12:00p
    EPSON    HLP     17920   8-31-89  12:00p
    EPSONDAT DLL     51200   8-31-89  12:00p
    PSCRIPT  DRV    330752   8-31-89  12:00p
    IBM4019  DRV    163840   8-31-89  12:00p
    IBM4019  PMF    173665   8-31-89  12:00p
            6 file(s)     786017 bytes
                          671232 bytes free
