software/pcx86/sys/os2/ibm/1.3/index.md
---
layout: page
title: IBM OS/2 1.3
permalink: /software/pcx86/sys/os2/ibm/1.3/
redirect_from: /disks/pcx86/os2/ibm/1.3/
machines:
  - id: ibm5170
    type: pcx86
    config: /configs/pcx86/machine/ibm/5170/cga/640kb/rev3/machine.xml
    autoGen: true
    autoMount:
      B:
        name: "IBM OS/2 1.3 (Install)"
    autoType: $date\r$time\rB:\rDIR\r
---

{% include machine.html id="ibm5170" %}

### Directory of IBM OS/2 1.3 (Install)

     Volume in drive A is OS2 INSTALL
     Directory of A:\

    OS2LDR      *    15360  11-02-90  12:00p
    OS2KRNL     *   289306  11-02-90  12:00p
    ABIOS    SYS       336  11-02-90  12:00p
    SYSINSTX COM     41118  11-02-90  12:00p
    SIPANEL1 DLL     24576  11-02-90  12:00p
    ANSICALL DLL      3333  11-02-90  12:00p
    BKSCALLS DLL      6509  11-02-90  12:00p
    BVSCALLS DLL     21633  11-02-90  12:00p
    BASEDD01 SYS     33660  11-02-90  12:00p
    BASEDD02 SYS     36364  11-02-90  12:00p
    BASEDD03 SYS     33660  11-02-90  12:00p
    DISK01   SYS     27186  11-02-90  12:00p
    DISK02   SYS     29074  11-02-90  12:00p
    DISK03   SYS     25634  11-02-90  12:00p
    CMD      EXE     88112  11-02-90  12:00p
    DISK0    SCD      1124  11-02-90  12:00p
    CGA      RC@      4836  11-02-90  12:00p
    EGA      RC@      4876  11-02-90  12:00p
    PLASMA   RC@      4884  11-02-90  12:00p
    VGAM     RC@      4882  11-02-90  12:00p
    VGA      RC@      4881  11-02-90  12:00p
    8514     RC@      4894  11-02-90  12:00p
    8514M    RC@      4892  11-02-90  12:00p
    INISYS   RC@       450  11-02-90  12:00p
    INI      RC@      2563  11-02-90  12:00p
    UPINI    RC@       477  11-02-90  12:00p
    CONFIG   SYS       329  11-02-90  12:00p
    COUNTRY  SYS     24466  11-02-90  12:00p
    DOSCALL1 DLL     12927  11-02-90  12:00p
    F80000   BIO      9728  11-02-90  12:00p
    F80100   BIO      9216  11-02-90  12:00p
    F80200   BIO     10752  11-02-90  12:00p
    F80600   BIO      9728  11-02-90  12:00p
    F80700   BIO      1536  11-02-90  12:00p
    F80701   BIO      1536  11-02-90  12:00p
    F80703   BIO      1536  11-02-90  12:00p
    F80704   BIO      1024  11-02-90  12:00p
    F80A00   BIO      1536  11-02-90  12:00p
    F80A01   BIO      1536  11-02-90  12:00p
    F80A02   BIO      1024  11-02-90  12:00p
    F80B00   BIO      1024  11-02-90  12:00p
    F81000   BIO      1536  11-02-90  12:00p
    F88000   BIO      4096  11-02-90  12:00p
    F80402   BIO      1536  11-02-90  12:00p
    F80403   BIO      1024  11-02-90  12:00p
    F80404   BIO      1024  11-02-90  12:00p
    F80902   BIO      1536  11-02-90  12:00p
    F80903   BIO      1024  11-02-90  12:00p
    F80904   BIO      1024  11-02-90  12:00p
    F80D00   BIO      1536  11-02-90  12:00p
    FC0400   BIO      9728  11-02-90  12:00p
    FC0403   BIO      1536  11-02-90  12:00p
    FC0500   BIO      9728  11-02-90  12:00p
    F80B02   BIO      1024  11-02-90  12:00p
    F85001   BIO      1024  11-02-90  12:00p
    F80C00   BIO      1024  11-02-90  12:00p
    F80702   BIO      1536  11-02-90  12:00p
    FDISK    COM     43344  11-02-90  12:00p
    HARDERR  EXE     11392  11-02-90  12:00p
    KBDCALLS DLL      7721  11-02-90  12:00p
    KEYBOARD DCP      5177  11-02-90  12:00p
    MOUCALLS DLL      4844  11-02-90  12:00p
    MSG      DLL      5244  11-02-90  12:00p
    NLS      DLL      4023  11-02-90  12:00p
    OSO001   MSG    107768  11-02-90  12:00p
    HPFS     IFS     99962  11-02-90  12:00p
    QUECALLS DLL      9626  11-02-90  12:00p
    SESMGR   DLL     23924  11-02-90  12:00p
    SYSINST1 EXE      3216  11-02-90  12:00p
    SYSINST2 EXE    124688  11-02-90  12:00p
    SYSLEVEL OS2       169  11-02-90  12:00p
    VDISK    SYS      2052  11-02-90  12:00p
    BVHINIT  DLL      8068  11-02-90  12:00p
    VIOCALLS DLL     16087  11-02-90  12:00p
    VTBL850  DCP     10478  11-02-90  12:00p
           75 file(s)    1330237 bytes
                          114688 bytes free

### Directory of IBM OS/2 1.3 (Disk 1)

     Volume in drive A is OS2 DISK 1
     Directory of A:\

    ATTRIB   EX@     28223  11-02-90  12:00p
    CACHE    EX@     11058  11-02-90  12:00p
    DOSRFICO DL@     25167  11-02-90  12:00p
    FDISKPM  EX@     51896  11-02-90  12:00p
    FDISKPM  DL@      3875  11-02-90  12:00p
    FDISKPMH HL@      8310  11-02-90  12:00p
    LABEL    CO@     25780  11-02-90  12:00p
    PMWINDUM DL@       601  11-02-90  12:00p
    MAKEINI  EX@     45267  11-02-90  12:00p
    MOVESPL  EX@     38700  11-02-90  12:00p
    OS2SMDUM DL@       304  11-02-90  12:00p
    DISK1    SCD      1040  11-02-90  12:00p
    CONVERT  EX@     15065  11-02-90  12:00p
    BACKUP   EXE     26533  11-02-90  12:00p
    KEYB     COM     15754  11-02-90  12:00p
    KEYBOARD DCP     94007  11-02-90  12:00p
    CHKDSK   COM     67376  11-02-90  12:00p
    FORMAT   COM     56208  11-02-90  12:00p
    RECOVER  COM     49632  11-02-90  12:00p
    RESTORE  EXE     36656  11-02-90  12:00p
    SIPANEL2 DLL    210432  11-02-90  12:00p
    SIPANEL3 DLL     76288  11-02-90  12:00p
    SORT     EX@     24771  11-02-90  12:00p
    STARTLW  DLL      1076  11-02-90  12:00p
    TREE     CO@     27809  11-02-90  12:00p
    UHPFS    DLL    156672  11-02-90  12:00p
    UNPACK   EXE     61168  11-02-90  12:00p
           27 file(s)    1159668 bytes
                          291328 bytes free

### Directory of IBM OS/2 1.3 (Disk 2)

     Volume in drive A is OS2 DISK 2
     Directory of A:\

    ANSI     EX@      7245  11-02-90  12:00p
    BMSCALLS DL@      3376  11-02-90  12:00p
    COM01    SY@      6180  11-02-90  12:00p
    COM02    SY@      9705  11-02-90  12:00p
    COMP     CO@     29792  11-02-90  12:00p
    DDINSTAL EX@     50343  11-02-90  12:00p
    DISK2    SCD      1866  11-02-90  12:00p
    DISKCOMP CO@     32773  11-02-90  12:00p
    DISKCOPY CO@     36045  11-02-90  12:00p
    EAUTIL   EX@     27448  11-02-90  12:00p
    FIND     EX@     25520  11-02-90  12:00p
    LINK     EX@    103989  11-02-90  12:00p
    IBMMOU01 SY@      1692  11-02-90  12:00p
    IBMMOU02 SY@      2256  11-02-90  12:00p
    MODE     CO@     37688  11-02-90  12:00p
    MONCALLS DL@      3244  11-02-90  12:00p
    MORE     CO@     25214  11-02-90  12:00p
    MORTGAGE BA@      4678  11-02-90  12:00p
    MOUSE    SY@     12421  11-02-90  12:00p
    MSBUS01  SY@      2034  11-02-90  12:00p
    MSINP01  SY@      1695  11-02-90  12:00p
    MSPS201  SY@      1737  11-02-90  12:00p
    MSPS202  SY@      2405  11-02-90  12:00p
    MSSER01  SY@      2286  11-02-90  12:00p
    MSSER02  SY@      2682  11-02-90  12:00p
    NAMPIPES DL@       922  11-02-90  12:00p
    PCMOU01  SY@      2037  11-02-90  12:00p
    PCMOU02  SY@      2477  11-02-90  12:00p
    VISION01 SY@      2047  11-02-90  12:00p
    VISION02 SY@      2455  11-02-90  12:00p
    OSO001H  MS@     69141  11-02-90  12:00p
    POINTDD  SY@      5565  11-02-90  12:00p
    PRINT    CO@     26449  11-02-90  12:00p
    REPLACE  EX@     30531  11-02-90  12:00p
    SETCOM40 EX@      4381  11-02-90  12:00p
    STXTDMPC DL@      9753  11-02-90  12:00p
    SUBST    EX@     18838  11-02-90  12:00p
    SWAPPER  EX@      1545  11-02-90  12:00p
    SYSLEVEL EX@     27213  11-02-90  12:00p
    XCOPY    EX@     36739  11-02-90  12:00p
    HELPMGR  DL@    115028  11-02-90  12:00p
    HMHELP   HL@     13937  11-02-90  12:00p
    HPMGRMRI DL@      9172  11-02-90  12:00p
    E        EX@     59459  11-02-90  12:00p
    EHXDLMRI DL@      9663  11-02-90  12:00p
    PMMLE    DL@     50184  11-02-90  12:00p
    EHXHP    HL@     19681  11-02-90  12:00p
    BASIC    CO@       481  11-02-90  12:00p
    BASICA   CO@     35576  11-02-90  12:00p
    BOOT     CO@     31808  11-02-90  12:00p
    DMPC     EX@      2094  11-02-90  12:00p
    INSTAID  CM@       257  11-02-90  12:00p
    INSTAID  CN@       251  11-02-90  12:00p
    INSTAID  LI@      9306  11-02-90  12:00p
    INSTAID  PR@       230  11-02-90  12:00p
    INSTAIDE EX@     66402  11-02-90  12:00p
    ISPD     MS@      1197  11-02-90  12:00p
    ISPM     MS@       486  11-02-90  12:00p
           58 file(s)    1099619 bytes
                          342528 bytes free

### Directory of IBM OS/2 1.3 (Disk 3)

     Volume in drive A is OS2 DISK 3
     Directory of A:\

    CMDREF   IN@    165680  11-02-90  12:00p
    CPISPFPC DL@     88254  11-02-90  12:00p
    CREATEDD EX@     21001  11-02-90  12:00p
    DOS      SY@      1216  11-02-90  12:00p
    DOSCALLS LI@     16699  11-02-90  12:00p
    DTM      DL@       955  11-02-90  12:00p
    DISK3    SCD      1565  11-02-90  12:00p
    EGA      SY@      2534  11-02-90  12:00p
    EXTDSKDD SY@      1764  11-02-90  12:00p
    HELP     BA@       392  11-02-90  12:00p
    HELP     CM@       387  11-02-90  12:00p
    HELPMSG  EX@     29034  11-02-90  12:00p
    INACALL  DL@       932  11-02-90  12:00p
    PMCPL    EX@     65087  11-02-90  12:00p
    PMCPL    DL@     10026  11-02-90  12:00p
    PMCPLH   HL@     24353  11-02-90  12:00p
    PMEXEC   EX@     37455  11-02-90  12:00p
    PMEXEC   DL@      7282  11-02-90  12:00p
    PMEXECH  HL@     24654  11-02-90  12:00p
    PMFILE   EX@    138949  11-02-90  12:00p
    PMFILE   DL@     16139  11-02-90  12:00p
    PMFILEH  HL@     52065  11-02-90  12:00p
    PMSHELL  EX@      8249  11-02-90  12:00p
    PMSHELL  DL@       791  11-02-90  12:00p
    PMSHELLH HL@      3087  11-02-90  12:00p
    PMSHLTKT DL@     35506  11-02-90  12:00p
    VIEW     EX@     12360  11-02-90  12:00p
    VIEWDOC  EX@     12080  11-02-90  12:00p
    VIEWH    HL@     12882  11-02-90  12:00p
    VIOTBL   DC@     17783  11-02-90  12:00p
    INTROE   EX@     51523  11-02-90  12:00p
    INTROI   TU@     26546  11-02-90  12:00p
    INTROS   TU@     16543  11-02-90  12:00p
    SYSLOG   EX@     54935  11-02-90  12:00p
    ANSI     SY@      2124  11-02-90  12:00p
    APPEND   EX@      4465  11-02-90  12:00p
    ASSIGN   CO@      1555  11-02-90  12:00p
    COMMAND  CO@     22958  11-02-90  12:00p
    EDLIN    CO@      5950  11-02-90  12:00p
    GRAFTABL CO@      5713  11-02-90  12:00p
    JOIN     EX@     19251  11-02-90  12:00p
           41 file(s)    1020724 bytes
                          425472 bytes free

### Directory of IBM OS/2 1.3 (Disk 4)

     Volume in drive A is OS2 DISK 4
     Directory of A:\

    DISK4    SCD       907  11-02-90  12:00p
    COURIER  FO@     44424  11-02-90  12:00p
    OS2SM    DL@     29274  11-02-90  12:00p
    OS2SM    PD@      1297  11-02-90  12:00p
    PICH     HL@     12465  11-02-90  12:00p
    PICICHG  EX@     23495  11-02-90  12:00p
    PICPH    HL@     24598  11-02-90  12:00p
    PICPRINT EX@     76998  11-02-90  12:00p
    PICSHOW  EX@     30338  11-02-90  12:00p
    PMC00000 TF@      2217  11-02-90  12:00p
    PMC10000 TF@      3384  11-02-90  12:00p
    PMC20000 TF@     10326  11-02-90  12:00p
    PMC30000 TF@       724  11-02-90  12:00p
    PMC40000 TF@       282  11-02-90  12:00p
    PMC50000 TF@      8071  11-02-90  12:00p
    PMC60000 TF@      1678  11-02-90  12:00p
    PMC70000 TF@      2421  11-02-90  12:00p
    PMC80000 TF@       376  11-02-90  12:00p
    PMGPI    PD@      3067  11-02-90  12:00p
    PMPIC    PD@       136  11-02-90  12:00p
    PMSHAPI  PD@       788  11-02-90  12:00p
    PMSPL    PD@       700  11-02-90  12:00p
    SPL1B    PD@      1039  11-02-90  12:00p
    TIMES    FO@    118584  11-02-90  12:00p
    HELV     FO@    117467  11-02-90  12:00p
    SYSMONO  FO@     13608  11-02-90  12:00p
    PMPIC    DL@     31476  11-02-90  12:00p
    PMVIOP   HL@      4048  11-02-90  12:00p
    PMVIOP   DL@     35040  11-02-90  12:00p
    PSHH     HL@     13926  11-02-90  12:00p
    COURIER  PS@    149907  11-02-90  12:00p
    HELVETIC PS@    114619  11-02-90  12:00p
    PMATM    DL@     80464  11-02-90  12:00p
    TIMESNRM PS@    126519  11-02-90  12:00p
           34 file(s)    1084663 bytes
                          364032 bytes free

### Directory of IBM OS/2 1.3 (Disk 5)

     Volume in drive A is OS2 DISK 5
     Directory of A:\

    DISK5    SCD       543  11-02-90  12:00p
    BVH8514A DL@      6193  11-02-90  12:00p
    BVHCGA   DL@     14080  11-02-90  12:00p
    BVHEGA   DL@     20471  11-02-90  12:00p
    BVHMPA   DL@     11164  11-02-90  12:00p
    BVHVGA   DL@     23446  11-02-90  12:00p
    BVHXGA   DL@      2695  11-02-90  12:00p
    BVHWNDW  DL@      5988  11-02-90  12:00p
    FKA      DL@      9253  11-02-90  12:00p
    IBMBGA   DL@    132587  11-02-90  12:00p
    IBMCGA   DL@     76356  11-02-90  12:00p
    IBMEGA   DL@     83509  11-02-90  12:00p
    IBMVGA   DL@     84451  11-02-90  12:00p
    IBMXGA   DL@    196432  11-02-90  12:00p
    PMAVIO   DL@      4114  11-02-90  12:00p
    PMBIND   DL@     34414  11-02-90  12:00p
    PMTKT    DL@     17841  11-02-90  12:00p
    PMTRACE  DL@      1466  11-02-90  12:00p
    PMSHAPI  DL@     40301  11-02-90  12:00p
    PMGPI    DL@    150873  11-02-90  12:00p
    PMDD     SY@      2873  11-02-90  12:00p
    PMGRE    PD@       216  11-02-90  12:00p
    PMWIN    DL@    195861  11-02-90  12:00p
    PMWIN    PD@      3585  11-02-90  12:00p
    XGARING0 SY@      3394  11-02-90  12:00p
           25 file(s)    1122106 bytes
                          329216 bytes free

### Directory of IBM OS/2 1.3 (Disk 6)

     Volume in drive A is OS2 DISK 6
     Directory of A:\

    DISK6    SCD      1740  11-02-90  12:00p
    4201     DC@      5151  11-02-90  12:00p
    5202     DC@       330  11-02-90  12:00p
    LOGDAEM  EX@     18440  11-02-90  12:00p
    PATCH    EX@     32844  11-02-90  12:00p
    PMGRE    DL@    159024  11-02-90  12:00p
    PMPRINST EX@     26655  11-02-90  12:00p
    PMPRINST HL@      4021  11-02-90  12:00p
    PMPRINT  QP@      9032  11-02-90  12:00p
    PMSPL    DL@     65292  11-02-90  12:00p
    PMSPOOL  DL@     10278  11-02-90  12:00p
    PMSPOOL  EX@     54730  11-02-90  12:00p
    PMSPOOLH HL@     27324  11-02-90  12:00p
    PSTAT    EX@     12682  11-02-90  12:00p
    SPOOL    EX@     13234  11-02-90  12:00p
    TRACEFMT EX@     31353  11-02-90  12:00p
    TRSEL    EX@     12654  11-02-90  12:00p
    TRACE    EX@     19509  11-02-90  12:00p
    TUT      DL@     24900  11-02-90  12:00p
    SPL1B    DL@      2868  11-02-90  12:00p
    SPINBTN  DL@      8360  11-02-90  12:00p
    PMDRAG   DL@     22600  11-02-90  12:00p
    SPOOLCP  DL@      7095  11-02-90  12:00p
    PMREXX   DL@      5998  11-02-90  12:00p
    PMREXX   EX@     36706  11-02-90  12:00p
    PMREXX   HL@     11657  11-02-90  12:00p
    REX      MS@      1901  11-02-90  12:00p
    REXH     MS@      8211  11-02-90  12:00p
    REXX     DL@    198851  11-02-90  12:00p
    REXXAPI  DL@     29940  11-02-90  12:00p
    REXXINIT DL@       834  11-02-90  12:00p
    REXXTRY  CM@      1373  11-02-90  12:00p
    RXQUEUE  EX@      9485  11-02-90  12:00p
    RXSUBCOM EX@     16993  11-02-90  12:00p
    SPL      MS@      1469  11-02-90  12:00p
    SPLH     MS@      3860  11-02-90  12:00p
           36 file(s)     897394 bytes
                          550912 bytes free

### Directory of IBM OS/2 1.3 (Driver 1)

     Volume in drive A is OS2 PMDD 1
     Directory of A:\

    IBMNULL  DRV     88160  11-02-90  12:00p
    IBM5202  DRV     96832  11-02-90  12:00p
    READMEDD DAT     10214  11-02-90  12:00p
    PLOT     DAT      7056  11-02-90  12:00p
    PLOTQP   DAT     14774  11-02-90  12:00p
    PROPS    DAT      2893  11-02-90  12:00p
    DCP      DAT      8589  11-02-90  12:00p
    DDHELP   DAT     27720  11-02-90  12:00p
    PCL      DAT      5283  11-02-90  12:00p
    PRDESC   LST      5680  11-02-90  12:00p
    PRDRV    LST       738  11-02-90  12:00p
    EPSON    DAT      3058  11-02-90  12:00p
    PSCRPT   DAT      3879  11-02-90  12:00p
    4019     DAT     13284  11-02-90  12:00p
    42XX     DAT     10396  11-02-90  12:00p
    EPSON    DRV     49152  11-02-90  12:00p
    EA DATA  SF *    22528  11-02-90  12:00p
    EPSON    HLP     10825  11-02-90  12:00p
    EPSONDAT DLL     58880  11-02-90  12:00p
    PSCRIPT  DRV    390000  11-02-90  12:00p
    LASERJET DRV    160768  11-02-90  12:00p
    HP_ADDF  DLL     93184  11-02-90  12:00p
    GENERIC  DLL     75264  11-02-90  12:00p
    ACOURIE0 FNT      1065  11-02-90  12:00p
    BARCODE0 FNT      7570  11-02-90  12:00p
    BTMSRMN0 FNT      5920  11-02-90  12:00p
    CINTERN0 FNT      1410  11-02-90  12:00p
    DPRESTI0 FNT      1068  11-02-90  12:00p
    ELETTER0 FNT      1067  11-02-90  12:00p
    FORMSET0 FNT      9932  11-02-90  12:00p
    FTMSRMN0 FNT      5903  11-02-90  12:00p
    GLEGALE0 FNT      3129  11-02-90  12:00p
    GLOBALT0 FNT      6676  11-02-90  12:00p
    GREATST0 FNT      4727  11-02-90  12:00p
    HLEGALC0 FNT      3476  11-02-90  12:00p
    INTERNA0 FNT     24099  11-02-90  12:00p
    JMATHEL0 FNT      4507  11-02-90  12:00p
    KMATHTM0 FNT     14414  11-02-90  12:00p
    LCOURIE0 FNT      1063  11-02-90  12:00p
    MATHSCI0 FNT     11643  11-02-90  12:00p
    MPRESTI0 FNT      1072  11-02-90  12:00p
    NLETTER0 FNT      1071  11-02-90  12:00p
    PERSUAS0 FNT     13256  11-02-90  12:00p
    POLISHE0 FNT      9339  11-02-90  12:00p
    PROCOLL0 FNT     34443  11-02-90  12:00p
    PTMSRMN0 FNT      3350  11-02-90  12:00p
    QMEMO1X0 FNT      1405  11-02-90  12:00p
    RPRESEN0 FNT      5560  11-02-90  12:00p
    S1COURI0 FNT      1074  11-02-90  12:00p
    S2TMSRM0 FNT      5573  11-02-90  12:00p
    TTAX1XX0 FNT      7005  11-02-90  12:00p
    UFORMSP0 FNT      6252  11-02-90  12:00p
    VFORMSL0 FNT      6253  11-02-90  12:00p
    WORDPER0 FNT     19952  11-02-90  12:00p
    XBARCOD0 FNT      3635  11-02-90  12:00p
    YPCCOUR0 FNT      3816  11-02-90  12:00p
    Z1ACART0 FNT     18106  11-02-90  12:00p
    ZMICROS0 FNT     18082  11-02-90  12:00p
           58 file(s)    1426070 bytes
                           16896 bytes free

### Directory of IBM OS/2 1.3 (Driver 2)

     Volume in drive A is OS2 PMDD 2
     Directory of A:\

    IBM3852  DRV     88496  11-02-90  12:00p
    IBM4019  DRV    169744  11-02-90  12:00p
    EA DATA  SF *     3072  11-02-90  12:00p
    IBM4019  PMF    191249  11-02-90  12:00p
    IBM42XX  DRV    286640  11-02-90  12:00p
    IBM5152  DRV     87952  11-02-90  12:00p
    IBM5182  DRV     94304  11-02-90  12:00p
    IBM52011 DRV     67520  11-02-90  12:00p
    IBM52012 DRV     94624  11-02-90  12:00p
    IBM5216  DRV     67536  11-02-90  12:00p
    4208     DCP       533  11-02-90  12:00p
    IBM4201  DCP     17069  11-02-90  12:00p
    PLOTTERS DRV    105488  11-02-90  12:00p
    PMPLOT   QPR     11776  11-02-90  12:00p
    PMPLOTPD DRV     95664  11-02-90  12:00p
           15 file(s)    1381667 bytes
                           73216 bytes free

### Directory of IBM OS/2 1.3 (Fonts)

     Volume in drive A is OS2 FONT 1
     Directory of A:\

    COU      AFM     23654  11-02-90  12:00p
    COU      PFB     45692  11-02-90  12:00p
    COUB     AFM     23591  11-02-90  12:00p
    COUB     PFB     46363  11-02-90  12:00p
    COUBI    AFM     23776  11-02-90  12:00p
    COUBI    PFB     47270  11-02-90  12:00p
    COUI     AFM     23808  11-02-90  12:00p
    COUI     PFB     46060  11-02-90  12:00p
    HEL      AFM     25584  11-02-90  12:00p
    HEL      PFB     40979  11-02-90  12:00p
    HELB     AFM     25518  11-02-90  12:00p
    HELB     PFB     42455  11-02-90  12:00p
    HELBI    AFM     25611  11-02-90  12:00p
    HELBI    PFB     44635  11-02-90  12:00p
    HELI     AFM     25589  11-02-90  12:00p
    HELI     PFB     44250  11-02-90  12:00p
    TNR      AFM     25566  11-02-90  12:00p
    TNR      PFB     46597  11-02-90  12:00p
    TNRB     AFM     25614  11-02-90  12:00p
    TNRB     PFB     48226  11-02-90  12:00p
    TNRBI    AFM     25828  11-02-90  12:00p
    TNRBI    PFB     51832  11-02-90  12:00p
    TNRI     AFM     25818  11-02-90  12:00p
    TNRI     PFB     50940  11-02-90  12:00p
           24 file(s)     855256 bytes
                          595456 bytes free
